--- a/README.Rmd
+++ b/README.Rmd
@@ -30,3 +30,7 @@ devtools::install_github("jsta/nml")
 ## Example
 
 Forthcoming!
+
+## Prior Art
+
+This package was inspired by [f90nml](https://github.com/marshallward/f90nml) and [glmtools](https://github.com/USGS-R/glmtools).
