specify f90nml, linting

--- a/README.Rmd
+++ b/README.Rmd
@@ -36,14 +36,14 @@ library(nml)
 read_nml("tests/testthat/sample.nml")
 ```
 
-### Using the python parser via the `reticulate` bridge
+### Using the `f90nml` python parser via the `reticulate` bridge
 
 ```{r }
 library(reticulate)
 use_python("/home/jose/anaconda3/bin/python")
 
 f90nml <- import("f90nml")
-pd <- import("pandas")
+pd     <- import("pandas")
 
 nml <- f90nml$read("tests/testthat/sample.nml")
 
